--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
             </div>
         </section>
 
+        <!-- 투어 루트 섹션 -->
+        <section id="tour-routes" class="tour-routes-section">
+            <div class="section-header">
+                <h2><i class="fas fa-route"></i> 테마파크 월드 투어</h2>
+                <p>여러 나라의 테마파크를 한번에! 특별한 루트 여행</p>
+            </div>
+
+            <div class="tour-routes-grid" id="tourRoutesGrid">
+                <!-- 동적으로 생성됨 -->
+            </div>
+
+            <div class="loading" id="tourLoading" style="display: none;">
+                <i class="fas fa-spinner fa-spin"></i> 투어 루트를 불러오는 중...
+            </div>
+        </section>
+
         <!-- 사용자 일정 짜기 (사이드바) -->
         <aside id="planner" class="planner-section">
             <div class="planner-header">
@@ -167,6 +183,8 @@
     <!-- 스크립트 -->
     <script src="config.js"></script>
     <script src="api.js"></script>
+    <script src="tour-routes.js"></script>
+    <script src="tour-display.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
