--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     </header>
 
     <!-- 히어로 섹션 -->
-    <section class="hero" style="background: linear-gradient(135deg, rgba(0,0,0,0.25), rgba(0,0,0,0.35)), url('https://images.unsplash.com/photo-1595274013294-6946aac9eb22?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1470') no-repeat center center/cover;">
+    <section class="hero" style="background: linear-gradient(135deg, rgba(0,0,0,0.25), rgba(0,0,0,0.35)), url('https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50') no-repeat center center/cover;">
         <div class="hero-bg-img" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1470" alt="" loading="eager" decoding="async" fetchpriority="high" width="1600" height="900" />
+            <img src="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50" alt="" loading="eager" decoding="async" fetchpriority="high" width="1600" height="900" />
         </div>
         <div class="hero-content">
-            <h2>✨ 잠시 모든 것을 잊고 동화 속 주인공이 되는 시간</h2>
+            <h2>✨동화 속 주인공이 되는 시간✨</h2>
             <p>일상에 지친 당신에게 마법 같은 하루를 선물합니다</p>
             <div class="scroll-indicator">
                 <i class="fas fa-chevron-down"></i>
