--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
     <!-- 히어로 섹션 -->
     <section class="hero" style="background: linear-gradient(135deg, rgba(0,0,0,0.25), rgba(0,0,0,0.35)), url('https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50') no-repeat center center/cover;">
         <div class="hero-bg-img" aria-hidden="true">
-            <img src="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50" alt="" loading="eager" decoding="async" fetchpriority="high" width="1600" height="900" />
+            <picture>
+                <source type="image/avif" srcset="images/optimized/hero-castle.avif">
+                <source type="image/webp" srcset="images/optimized/hero-castle.webp">
+                <img src="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50" alt="" loading="eager" decoding="async" fetchpriority="high" width="1600" height="900" />
+            </picture>
         </div>
         <div class="hero-content">
             <h2>✨동화 속 주인공이 되는 시간✨</h2>
@@ -559,6 +563,9 @@
     <script src="tour-routes.js"></script>
     <script src="tour-display.js"></script>
     <script src="search.js"></script>
+    <script src="scripts/hero.js"></script>
+    <script src="scripts/calculator.js"></script>
+    <script src="scripts/planner.js"></script>
     <script src="scripts/nav.js"></script>
     <script src="app.js"></script>
 </body>
