--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="preconnect" href="https://source.unsplash.com" crossorigin>
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
     <link rel="preconnect" href="https://upload.wikimedia.org" crossorigin>
+    <!-- Preload 1st-priority hero image to improve LCP -->
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50">
     <link rel="stylesheet" href="style.css?v=20251028-2">
 </head>
 <body>
@@ -52,11 +54,14 @@
     <!-- 히어로 섹션 -->
     <section class="hero" style="background: linear-gradient(135deg, rgba(0,0,0,0.25), rgba(0,0,0,0.35)), url('https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50') no-repeat center center/cover;">
         <div class="hero-bg-img" aria-hidden="true">
-            <picture>
-                <source type="image/avif" srcset="images/optimized/hero-castle.avif">
-                <source type="image/webp" srcset="images/optimized/hero-castle.webp">
-                <img src="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50" alt="" loading="eager" decoding="async" fetchpriority="high" width="1600" height="900" />
-            </picture>
+            <!-- 요청에 따라 원격(Unsplash 블러) 1순위, 로컬은 실패 시 2순위로 시도 -->
+            <img src="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50"
+                 alt=""
+                 loading="eager"
+                 decoding="async"
+                 fetchpriority="high"
+                 width="1600"
+                 height="900" />
         </div>
         <div class="hero-content">
             <h2>✨동화 속 주인공이 되는 시간✨</h2>
