feat(about): add demo notice banner above project purpose
- Insert demo notice in About section with accessible markup
- Add polished CSS: gradient border, icon badge, responsive tweaks
- Text: 교육용 데모, 예약/결제 불가 및 정보 예시 고지

--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
                 </div>
 
                 <div class="about-content">
+                    <!-- 데모 안내 배너 -->
+                    <div class="demo-notice" role="note" aria-label="데모 안내">
+                        <div class="notice-icon" aria-hidden="true">
+                            <i class="fas fa-info-circle"></i>
+                        </div>
+                        <p class="notice-text">
+                            안내: 본 웹사이트는 교육 목적의 데모 프로젝트로, 실제 예약 및 결제 기능을 제공하지 않습니다. 표기된 정보와 가격은 예시이며 실제와 다를 수 있습니다.
+                        </p>
+                    </div>
+
                     <!-- 프로젝트 개요 -->
                     <div class="about-card">
                         <div class="card-icon">
