--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <link rel="preload" as="image" href="https://images.unsplash.com/photo-1595274013294-6946aac9eb22?auto=format&fit=crop&q=35&w=800&blur=50">
     <link rel="stylesheet" href="style.css?v=20251028-2">
     <link rel="stylesheet" href="prices.css?v=20251028-2">
+    <!-- Leaflet 지도 라이브러리 -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="js/tour-route-map.js?v=20251104"></script>
 </head>
 <body>
     <!-- 헤더 -->
@@ -356,6 +360,13 @@
 
         <!-- 여행 상품 (아래로 이동) -->
         <section id="packages" class="packages-section">
+          <div class="package-map-block" style="max-width:800px;margin:2rem auto 3rem auto;">
+            <h3 style="text-align:center;color:#764ba2;margin-bottom:1rem;">
+              <i class="fas fa-route"></i> 아시아 테마파크 그랜드 투어 경로
+            </h3>
+            <div id="asiaGrandTourMap" style="width:100%;height:400px;border-radius:16px;box-shadow:0 4px 24px rgba(0,0,0,0.08);"></div>
+            <script>document.addEventListener('DOMContentLoaded',function(){if(window.renderAsiaGrandTourMap){renderAsiaGrandTourMap('asiaGrandTourMap');}});</script>
+          </div>
             <div class="section-header">
                 <h2><i class="fas fa-gifts"></i> 🎢 꿈꾸던 테마파크, 완벽한 일정으로</h2>
                 <p>번거로운 계획은 저희가, 즐거운 추억은 당신이</p>
