--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
     <link rel="stylesheet" href="prices.css?v=20251028-2">
     <!-- Leaflet 지도 라이브러리 -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <style>
+        .custom-div-icon {
+            background: none;
+            border: none;
+        }
+        .map-marker-number {
+            position: relative;
+            width: 30px;
+            height: 42px;
+            background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 42"><path fill="%23764ba2" d="M16 0C7.163 0 0 7.163 0 16c0 8.837 16 26 16 26s16-17.163 16-26C32 7.163 24.837 0 16 0z"/><circle fill="%23ffffff" cx="16" cy="16" r="12"/></svg>');
+            background-size: contain;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        .map-marker-number span {
+            color: #764ba2;
+            font-weight: 900;
+            font-size: 14px;
+            line-height: 1;
+            margin-top: -6px; /* Adjust for pin shape */
+        }
+    </style>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/tour-route-map.js?v=20251104"></script>
 </head>
