--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             line-height: 1;
             margin-top: -6px; /* Adjust for pin shape */
         }
+        .map-tooltip {
+            background-color: rgba(255, 255, 255, 0.85);
+            border: 1px solid #764ba2;
+            border-radius: 8px;
+            padding: 8px 12px;
+            font-family: 'Noto Sans KR', sans-serif;
+            font-size: 13px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            white-space: nowrap;
+        }
     </style>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="js/tour-route-map.js?v=20251104"></script>
