fix: 지도 스크립트 로딩 순서 오류 해결

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         }
     </style>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="tour-routes.js"></script> 
     <script src="js/tour-route-map.js?v=20251104"></script>
 </head>
 <body>
